fix jumpy search box on reports tab
git-svn-id: http://svn.uscm.org/staffsite/trunk/controlled-src@6500 e11218b7-830e-0410-a693-d1c1f8b4456b

--- a/webapps-src/staffsite/web/modules/css/styles.css
+++ b/webapps-src/staffsite/web/modules/css/styles.css
@@ -154,7 +154,7 @@ background-position: 50% 50%;
 {display:block;width:110px;}
 
 #menubar .submenubar ul li.report
-{display:block;width:340px;}
+{display:block;width:180px;}
 
 /* ********************* */
 
