--- a/webapps-src/staffsite/web/modules/stylesheets/search.css
+++ b/webapps-src/staffsite/web/modules/stylesheets/search.css
@@ -99,7 +99,7 @@ div.quicksearch_open form select.dropmulti {
 	border:none;
 	margin:none;
 	margin-top:6px;
-	padding-left:20px;
+	
 	}	
 
 input.short_submit
